Cleaned out unnecessary pieces, moved out of camel case, reduced some clutter.

--- a/README
+++ b/README
@@ -11,3 +11,20 @@ WTForms	1.0.5
 Werkzeug	0.9.4
 lxml	2.3.6
 simplejson	3.3.0
+
+
+Sample player listing:
+Faer Kado
+GunfighterAK47
+Henrietta Morkeheim
+Johnny Hammersticks
+Kelenia Taranogas
+Kliedar
+Luffy999
+Malkador Sigillit
+Oolon Rockefeller
+Rowan Crendraven
+Unit 1138
+Weli Gaterau
+Yornum Haree
+ZavoDiK
