Created function to pull api info and report off of it, stub left in for eventual checking of corps/alliances from standings api and character api

--- a/README
+++ b/README
@@ -14,17 +14,22 @@ simplejson	3.3.0
 
 
 Sample player listing:
-Faer Kado
-GunfighterAK47
-Henrietta Morkeheim
-Johnny Hammersticks
-Kelenia Taranogas
-Kliedar
-Luffy999
-Malkador Sigillit
-Oolon Rockefeller
-Rowan Crendraven
-Unit 1138
-Weli Gaterau
-Yornum Haree
-ZavoDiK
+Abraham Werner
+Asatru Nornsbjorn
+Bob McSimmons
+Bruce Kadine
+Doris Itsatrap
+Kashaus Chastot
+Marbo Lechter
+Nascent Omniscience
+NotContinuum
+Nove Takamachi
+Orgasmadrone
+Paxswill
+mak48
+Sevian Dallocort
+Soonkies
+Spark Progenitori
+Viveo Takamachi
+Warp 2 Me
+Zervonn
