--- a/README
+++ b/README
@@ -1,24 +1,6 @@
 This is a hacked-together solution to track standings for an Eve Online corporation.
 
 Sample player listing:
-Abraham Werner
-Asatru Nornsbjorn
-Bob McSimmons
-Bruce Kadine
-Doris Itsatrap
-Kashaus Chastot
-Marbo Lechter
-Maziwe Zakizo
-Nascent Omniscience
-NotContinuum
-Nove Takamachi
-Orgasmadrone
-Paxswill
-mak48
-Sevian Dallocort
-Silver Chair
-Soonkies
-Spark Progenitori
-Viveo Takamachi
-Warp 2 Me
-Zervonn
+CCP Dolan
+Dante Tsaronis
+Beffah Siabi
